<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AboutActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/about_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/about_ejar"
        app:titleTextAppearance="@style/titleBarAppearance"
        app:titleTextColor="@android:color/white"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.229" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:padding="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/cairo_font"
                android:text="@string/about_app_name"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/cairo_font"
                android:text="@string/app_version"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_font"
            android:text="@string/developer"
            android:textColor="@android:color/black" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="36dp"
                android:layout_margin="4dp"
                android:padding="2dp"
                android:src="@drawable/ic_facebook"
                android:onClick="facebook"/>
            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="36dp"
                android:layout_margin="4dp"
                android:padding="2dp"
                android:src="@drawable/ic_email"
                android:onClick="mail"/>
            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="36dp"
                android:layout_margin="4dp"
                android:padding="2dp"
                android:src="@drawable/ic_playstore"
                android:onClick="playStore"/>
            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="36dp"
                android:layout_margin="4dp"
                android:padding="2dp"
                android:src="@drawable/ic_share"
                android:onClick="share"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_font"
            android:text="@string/about_desc"
            android:textColor="@android:color/black" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>