<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:theme="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:title="@string/login_btn"
        app:titleTextAppearance="@style/titleBarAppearance"
        app:titleTextColor="@android:color/white"
        tools:ignore="MissingConstraints" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ejar_logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/logo"
                android:layout_gravity="center"/>
            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginStart="@dimen/edit_text_margin"
                android:layout_marginLeft="@dimen/edit_text_margin"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="@dimen/edit_text_margin"
                android:layout_marginRight="@dimen/edit_text_margin"
                android:fontFamily="@font/cairo_font"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="12sp"/>


            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/edit_text_margin"
                android:layout_marginLeft="@dimen/edit_text_margin"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="@dimen/edit_text_margin"
                android:layout_marginRight="@dimen/edit_text_margin"
                android:ems="10"
                android:fontFamily="@font/cairo_font"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:textSize="12sp"
                android:textAlignment="textEnd"/>

            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/edit_text_margin"
                android:layout_marginLeft="@dimen/edit_text_margin"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="@dimen/edit_text_margin"
                android:layout_marginRight="@dimen/edit_text_margin"
                android:background="@drawable/main_btn"
                app:spinning_bar_width="4dp"
                app:spinning_bar_padding="6dp"
                app:spinning_bar_color="#FFF"
                android:fontFamily="@font/cairo_font"
                android:layout_gravity="center"
                android:text="@string/login_btn"
                android:textColor="@android:color/white"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/cairo_font"
                android:onClick="goToRestorePassword"
                android:text="@string/forget_password"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/edit_text_margin"
                android:layout_marginLeft="@dimen/edit_text_margin"
                android:layout_marginEnd="@dimen/edit_text_margin"
                android:layout_marginRight="@dimen/edit_text_margin"
                android:layout_marginBottom="@dimen/edit_text_margin"
                android:layout_marginTop="30dp"
                android:background="@drawable/main_btn"
                android:ems="10"
                android:fontFamily="@font/cairo_font"
                android:onClick="goToRegister"
                android:text="@string/dont_have_account"
                android:textColor="@android:color/white"
                android:textSize="12sp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>