<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RestorePasswordActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/restore_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextAppearance="@style/titleBarAppearance"
        app:titleTextColor="@android:color/white"
        app:title="@string/restore_toolbar"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.appcompat.widget.Toolbar>
    <ImageView
        android:id="@+id/ejar_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_restore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restore_toolbar" />

    <EditText
        android:id="@+id/restore_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/edit_text_margin"
        android:layout_marginLeft="@dimen/edit_text_margin"
        android:layout_marginTop="@dimen/edit_text_margin"
        android:layout_marginEnd="@dimen/edit_text_margin"
        android:layout_marginRight="@dimen/edit_text_margin"
        android:ems="10"
        android:textSize="12sp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ejar_logo" />

    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
        android:id="@+id/restore_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/edit_text_margin"
        android:layout_marginLeft="@dimen/edit_text_margin"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="@dimen/edit_text_margin"
        android:layout_marginRight="@dimen/edit_text_margin"
        android:ems="10"
        app:spinning_bar_width="4dp"
        app:spinning_bar_padding="6dp"
        app:spinning_bar_color="#FFF"
        android:text="@string/restore_btn"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_size_btn"
        android:background="@drawable/main_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restore_email"
        android:onClick="recoverPasswordByEmail"/>
</androidx.constraintlayout.widget.ConstraintLayout>